[tool.poetry]
name = "azflow"
version = "0.1.0"
description = "Analyze cross-AZ traffic from Kubernetes Hubble flow logs"
authors = ["Your Name <ilia.buleh@exon-media.com>"]

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
azflow = "azflow.azflow:main"